translator sends can translate announcement