@@ -15,11 +15,14 @@ public class Wormhole {
 		Path newDirPath = Paths.get(userDirectory, "received-files");
 		File newDirFile = new File(newDirPath.toString());
 		
-		if (!newDirFile.exists()) {
-			newDirFile.mkdir();
-		}
-		
+//		if (!newDirFile.exists()) {
+//			newDirFile.mkdir();
+//		}
+//		
 //		Process process = Runtime.getRuntime().exec(command);
-		Runtime.getRuntime().exec(command.split(" "));
+//		System.out.println("Current directory 1 " + userDirectory);
+//		String[] newCommand = new String[] {"cd", "received-files"};
+//		Process process = new ProcessBuilder(newCommand).start();
+//		System.out.println("Current directory: " + System.getProperty("user.dir"));
 	}
 }
